added getRevisions method in revisionParser. fixed format of testGetRevisions. test passed